; ModuleID = '/home/carl/AnghaBench/hashcat/src/extr_shared.c_get_random_num.c'
source_filename = "/home/carl/AnghaBench/hashcat/src/extr_shared.c_get_random_num.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @get_random_num(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store i64 %0, i64* %4, align 8
  store i64 %1, i64* %5, align 8
  %7 = load i64, i64* %4, align 8
  %8 = load i64, i64* %5, align 8
  %9 = icmp eq i64 %7, %8
  br i1 %9, label %10, label %12

10:                                               ; preds = %2
  %11 = load i64, i64* %4, align 8
  store i64 %11, i64* %3, align 8
  br label %27

12:                                               ; preds = %2
  %13 = load i64, i64* %5, align 8
  %14 = load i64, i64* %4, align 8
  %15 = sub nsw i64 %13, %14
  store i64 %15, i64* %6, align 8
  %16 = load i64, i64* %6, align 8
  %17 = icmp eq i64 %16, 0
  br i1 %17, label %18, label %19

18:                                               ; preds = %12
  store i64 0, i64* %3, align 8
  br label %27

19:                                               ; preds = %12
  %20 = call i64 (...) @random()
  %21 = load i64, i64* %5, align 8
  %22 = load i64, i64* %4, align 8
  %23 = sub nsw i64 %21, %22
  %24 = srem i64 %20, %23
  %25 = load i64, i64* %4, align 8
  %26 = add nsw i64 %24, %25
  store i64 %26, i64* %3, align 8
  br label %27

27:                                               ; preds = %19, %18, %10
  %28 = load i64, i64* %3, align 8
  ret i64 %28
}

declare dso_local i64 @random(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
